package weblog;

option java_package = "es.tid.cosmos.base.data.generated";
option java_outer_classname = "WebLogProtocol";

message WebLog {
    required string user_id = 1;
    required string url = 2;
    required string date = 3;
}
